--- a/app/src/main/res/layout/activity_java.xml
+++ b/app/src/main/res/layout/activity_java.xml
@@ -5,15 +5,35 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".JavaActivity">
+        tools:context=".activity.JavaActivity">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello Java!"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Java"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginTop="32dp"
+            android:layout_marginRight="8dp" android:layout_marginLeft="8dp"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="Hello"
+            android:ems="10"
+            android:id="@+id/editText" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/container">
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
